Se crea tema claro con preferencia usuario

--- a/scss/bootstrap/_cards.scss
+++ b/scss/bootstrap/_cards.scss
@@ -22,7 +22,7 @@
     }
 
     &:hover {
-        box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
+        box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
         transform: translateY(-3%);
     }
 }
