--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,6 +1,6 @@
 // MAIN
 .main {
     text-align: center;
-    font-family: $font-secondary;
-    color: $color-font-primary;
+    font-family: var(--font-secondary);
+    color: var(--color-font-primary);
 }
