--- a/scss/bootstrap/_carousel.scss
+++ b/scss/bootstrap/_carousel.scss
@@ -1,20 +1,20 @@
 // CAROUSEL
 .carousel {
     &__caption {
-        background-color: $color-shadow;
+        background-color: var(--color-shadow);
         padding: 1rem;
         text-align: center;
         border-radius: 0.5rem;
     }
 
     &__title {
-        font-family: $font-primary;
+        font-family: var(--font-primary);
         font-size: 3rem;
-        color: $color-green;
+        color: var(--color-green);
     }
 
     &__text {
-        font-family: $font-secondary;
+        font-family: var(--font-secondary);
         font-weight: 400;
         font-size: 1.5rem;
     }
