--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -3,10 +3,10 @@
 
     &__title-site,
     &__link {
-        color: $color-pink;
+        color: var(--color-pink);
         text-decoration: none;
         &:hover {
-            color: $color-pink;
+            color: var(--color-pink);
         }
     }
 
@@ -15,7 +15,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background-image: linear-gradient(to left, $color-bg-primary, $color-bg-secondary);
+        background-image: linear-gradient(to left, var(--color-bg-primary), var(--color-bg-secondary));
         padding: 0.625rem;
         &__logo-site {
             width: 15rem;
@@ -23,7 +23,7 @@
         }
         &__title-site {
             display: none;
-            font-family: $font-primary;
+            font-family: var(--font-primary);
         }
     }
 
@@ -53,7 +53,7 @@
         }
         &__subtitle-site {
             display: block;
-            background-image: linear-gradient(to right, $color-pink, $color-blue);
+            background-image: linear-gradient(to right, var(--color-pink), var(--color-blue));
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
