--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,11 +1,12 @@
 
 @import './utilities/variables';
-@import './utilities/breakpoints';
 @import './utilities/mixins';
+@import './utilities/breakpoints';
 @import './utilities/animations';
 @import './bootstrap/cdn';
 @import './base/fonts';
 @import './base/reset';
+@import './layout/theme';
 @import './layout/main';
 @import './bootstrap/carousel';
 @import './components/containers';
