--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -53,6 +53,7 @@
 @mixin block-container ($content:'', $gap: 2rem, $bg-color: var(--color-violet), $ft-color: var(--color-font-secondary)) {
     @include subtitle($bg-color, $ft-color);
     @content;
+
     &__container {
         display: grid;
         grid-template-columns: 1fr;
@@ -75,8 +76,8 @@
     }
 }
 
-// CONTROL DARK MODE
-@mixin theme ($theme-dark: false) {
+// CONTROL DARK/LIGHT MODE
+@mixin theme ($theme-dark: '') {
     @if $theme-dark {
         .body {
             &--dark {
@@ -97,5 +98,88 @@
                 --color-gradient-2-black: #{$color-gradient-2-black-dark};
             }
         }
+
+        .navbar-toggler {
+            border-color: var(--color-font-primary);
+
+            .navbar-toggler-icon {
+                background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+            }
+        }
+
+        .btn {
+            text-transform: uppercase;
+            font-family: var(--font-secondary);
+            border-radius: 0.5rem;
+            padding: 0.5rem;
+            margin-left: 0.5rem;
+            margin-right: 0.5rem;
+
+            &--dark {
+                color: var(--color-blue);
+                border-color: var(--color-blue);
+                box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
+                transition: 0.7s;
+
+                &:hover {
+                    color: var(--color-font-secondary);
+                    border-color: var(--color-blue);
+                    background-color: var(--color-blue);
+                }
+            }
+        }
+    }
+
+    @else {
+        :root {
+            --color-bg-primary: #{$color-bg-primary};
+            --color-bg-secondary: #{$color-bg-secondary};
+            --color-font-primary: #{$color-font-primary};
+            --color-font-secondary: #{$color-font-secondary};
+            --color-shadow: #{$color-shadow};
+            --color-bg-navbar: #{$color-bg-navbar};
+            --color-violet: #{$color-violet};
+            --color-green: #{$color-green};
+            --color-pink: #{$color-pink};
+            --color-blue: #{$color-blue};
+            --color-instagram: #{$color-instagram};
+            --color-youtube: #{$color-youtube};
+            --color-facebook: #{$color-facebook};
+            --color-gradient-1-black: #{$color-gradient-1-black};
+            --color-gradient-2-black: #{$color-gradient-2-black};
+        }
+
+        .navbar-toggler {
+            border-color: var(--color-font-primary);
+
+            .navbar-toggler-icon {
+                background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+            }
+        }
+
+        .btn {
+            text-transform: uppercase;
+            font-family: var(--font-secondary);
+            border-radius: 0.5rem;
+            padding: 0.5rem;
+            margin-left: 0.5rem;
+            margin-right: 0.5rem;
+
+            &--light {
+                color: var(--color-font-primary);
+                border-color: var(--color-blue);
+                box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
+                background-color: var(--color-blue);
+                transition: 0.7s;
+
+                &:hover {
+                    color: var(--color-font-secondary);
+                    border-color: var(--color-green);
+                    background-color: var(--color-green);
+                }
+            }
+        }
+
+
     }
 }
