--- a/css/stylescss.css
+++ b/css/stylescss.css
@@ -45,21 +45,6 @@
     font-size: 150%; } }
 
 :root {
-  --color-bg-primary: #d5dadd;
-  --color-bg-secondary: #dcdee2;
-  --color-font-primary: #454E56;
-  --color-font-secondary: #2A2E34;
-  --color-shadow: rgba(0, 0, 0, 0.5);
-  --color-bg-navbar: rgba(225, 229, 235, 0.95);
-  --color-violet: #726CDA;
-  --color-green: #09C372;
-  --color-pink: #F8466A;
-  --color-blue: #339AF7;
-  --color-instagram: #BC1885;
-  --color-youtube: #F21100;
-  --color-facebook: #3F62A8;
-  --color-gradient-1-black: #806c6c;
-  --color-gradient-2-black: rgba(65, 47, 47, 0.1);
   --font-primary: Cubano, sans-serif;
   --font-secondary: Sofia Pro, sans-serif;
   --font-tertiary: Roboto Mono, monospace; }
@@ -80,7 +65,66 @@
     --color-youtube: #F21100;
     --color-facebook: #3F62A8;
     --color-gradient-1-black: black;
-    --color-gradient-2-black: rgba(255, 255, 255, 0.1); } }
+    --color-gradient-2-black: rgba(255, 255, 255, 0.1); }
+  .navbar-toggler {
+    border-color: var(--color-font-primary); }
+    .navbar-toggler .navbar-toggler-icon {
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
+  .btn, .form__button {
+    text-transform: uppercase;
+    font-family: var(--font-secondary);
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem; }
+    .btn--dark {
+      color: var(--color-blue);
+      border-color: var(--color-blue);
+      box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
+      transition: 0.7s; }
+      .btn--dark:hover {
+        color: var(--color-font-secondary);
+        border-color: var(--color-blue);
+        background-color: var(--color-blue); } }
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --color-bg-primary: #d5dadd;
+    --color-bg-secondary: #dcdee2;
+    --color-font-primary: #454E56;
+    --color-font-secondary: #2A2E34;
+    --color-shadow: rgba(0, 0, 0, 0.5);
+    --color-bg-navbar: rgba(225, 229, 235, 0.95);
+    --color-violet: #726CDA;
+    --color-green: #09C372;
+    --color-pink: #F8466A;
+    --color-blue: #339AF7;
+    --color-instagram: #BC1885;
+    --color-youtube: #F21100;
+    --color-facebook: #3F62A8;
+    --color-gradient-1-black: #806c6c;
+    --color-gradient-2-black: rgba(65, 47, 47, 0.1); }
+  .navbar-toggler {
+    border-color: var(--color-font-primary); }
+    .navbar-toggler .navbar-toggler-icon {
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
+  .btn, .form__button {
+    text-transform: uppercase;
+    font-family: var(--font-secondary);
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem; }
+    .btn--light {
+      color: var(--color-font-primary);
+      border-color: var(--color-blue);
+      box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
+      background-color: var(--color-blue);
+      transition: 0.7s; }
+      .btn--light:hover {
+        color: var(--color-font-secondary);
+        border-color: var(--color-green);
+        background-color: var(--color-green); } }
 
 .main {
   text-align: center;
@@ -645,24 +689,6 @@
   color: var(--color-font-secondary);
   background-color: var(--color-green);
   box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow); }
-
-.btn, .form__button {
-  text-transform: uppercase;
-  font-family: var(--font-secondary);
-  border-radius: 0.5rem;
-  padding: 0.5rem;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem; }
-
-.btn-outline-success {
-  color: var(--color-blue);
-  border-color: var(--color-blue);
-  box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
-  transition: 0.7s; }
-  .btn-outline-success:hover {
-    color: var(--color-font-secondary);
-    border-color: var(--color-blue);
-    background-color: var(--color-blue); }
 
 .header__title-site, .header__link {
   color: var(--color-pink);
