--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -27,7 +27,8 @@
 
     &__desc-about {
         font-size: 1.2rem;
-        margin-top: 1rem;
+        padding: 1rem;
+        
     }
 
     &__title-about {
