--- a/scss/bootstrap/_cards.scss
+++ b/scss/bootstrap/_cards.scss
@@ -18,7 +18,13 @@
     }
 
     .card-title {
+        font-size: 1.4rem;
         margin-bottom: 0;
+    }
+
+    .card-text {
+        font-size: 1.3rem;
+        font-weight: 600;
     }
 
     &:hover {
