--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import './utilities/breakpoints';
 @import './utilities/animations';
 @import './bootstrap/cdn';
+@import './bootstrap/buttons';
 @import './base/fonts';
 @import './base/reset';
 @import './layout/theme';
