--- a/css/stylescss.css
+++ b/css/stylescss.css
@@ -12,6 +12,14 @@
     transform: translate3d(0, 0, 0);
     opacity: 1; } }
 
+.btn, .form__button {
+  text-transform: uppercase;
+  font-family: var(--font-secondary);
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem; }
+
 @font-face {
   font-family: "Cubano";
   src: url("../fonts/Cubano.ttf");
@@ -41,16 +49,16 @@
   html {
     font-size: 100%; } }
 
-@media (min-width: 3700px) {
+@media (min-width: 3840px) {
   html {
     font-size: 120%; } }
 
-@media (min-width: 3840px) {
+@media (min-width: 4000px) {
   html {
     font-size: 150%; } }
 
 @media (prefers-color-scheme: dark) {
-  .body--dark {
+  :root {
     --color-bg-primary: #12181B;
     --color-bg-secondary: #29363f;
     --color-font-primary: #F5F5F5;
@@ -64,28 +72,26 @@
     --color-instagram: #BC1885;
     --color-youtube: #F21100;
     --color-facebook: #3F62A8;
+    --color-github: #BC1885;
+    --color-linkedin: #0A66C2;
     --color-gradient-1-black: black;
-    --color-gradient-2-black: rgba(255, 255, 255, 0.1); }
+    --color-gradient-2-black: rgba(255, 255, 255, 0.1);
+    --color-toggler: rgba(255, 255, 255, 0.55); }
   .navbar-toggler {
-    border-color: var(--color-font-primary); }
+    border-color: var(--color-toggler); }
+    .navbar-toggler:focus {
+      box-shadow: 0 0 0 var(--color-toggler); }
     .navbar-toggler .navbar-toggler-icon {
-      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
-  .btn, .form__button {
-    text-transform: uppercase;
-    font-family: var(--font-secondary);
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem; }
-    .btn--dark {
-      color: var(--color-blue);
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 0.55)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
+  .btn--dark {
+    color: var(--color-blue);
+    border-color: var(--color-blue);
+    box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
+    transition: 0.7s; }
+    .btn--dark:hover {
+      color: var(--color-font-secondary);
       border-color: var(--color-blue);
-      box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
-      transition: 0.7s; }
-      .btn--dark:hover {
-        color: var(--color-font-secondary);
-        border-color: var(--color-blue);
-        background-color: var(--color-blue); } }
+      background-color: var(--color-blue); } }
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -102,29 +108,27 @@
     --color-instagram: #BC1885;
     --color-youtube: #F21100;
     --color-facebook: #3F62A8;
+    --color-github: #BC1885;
+    --color-linkedin: #0A66C2;
     --color-gradient-1-black: #806c6c;
-    --color-gradient-2-black: rgba(65, 47, 47, 0.1); }
+    --color-gradient-2-black: rgba(65, 47, 47, 0.1);
+    --color-toggler: rgba(0, 0, 0, 0.55); }
   .navbar-toggler {
-    border-color: var(--color-font-primary); }
+    border-color: var(--color-toggler); }
+    .navbar-toggler:focus {
+      box-shadow: 0 0 0 var(--color-toggler); }
     .navbar-toggler .navbar-toggler-icon {
-      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
-  .btn, .form__button {
-    text-transform: uppercase;
-    font-family: var(--font-secondary);
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem; }
-    .btn--light {
-      color: var(--color-font-primary);
-      border-color: var(--color-blue);
-      box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
-      background-color: var(--color-blue);
-      transition: 0.7s; }
-      .btn--light:hover {
-        color: var(--color-font-secondary);
-        border-color: var(--color-green);
-        background-color: var(--color-green); } }
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 0.55)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
+  .btn--light {
+    color: var(--color-font-primary);
+    border-color: var(--color-blue);
+    box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
+    background-color: var(--color-blue);
+    transition: 0.7s; }
+    .btn--light:hover {
+      color: var(--color-font-secondary);
+      border-color: var(--color-green);
+      background-color: var(--color-green); } }
 
 .main {
   text-align: center;
@@ -620,12 +624,36 @@
 
 .copyright {
   background-image: linear-gradient(to bottom, var(--color-bg-primary), var(--color-bg-secondary));
-  padding: 1.5rem; }
+  padding: 1.5rem;
+  font-size: 1.3rem; }
   .copyright__text {
     text-align: center;
     color: var(--color-font-primary);
-    font-family: var(--font-secondary);
-    font-size: 1rem; }
+    font-family: var(--font-secondary); }
+  .copyright__profile {
+    display: inline-flex;
+    place-content: center;
+    place-items: center;
+    font-size: 1.5rem;
+    margin: 0.5rem; }
+  .copyright__github {
+    margin: 0.5rem; }
+  .copyright__linkedin {
+    margin: 0.5rem; }
+  .copyright__link--github {
+    padding: 0;
+    font-size: 1.5rem;
+    color: var(--color-font-primary); }
+    .copyright__link--github:hover {
+      transition: 0.7s;
+      color: var(--color-github); }
+  .copyright__link--linkedin {
+    padding: 0;
+    font-size: 1.5rem;
+    color: var(--color-font-primary); }
+    .copyright__link--linkedin:hover {
+      transition: 0.7s;
+      color: var(--color-linkedin); }
 
 .form {
   display: flex;
