--- a/scss/bootstrap/_cdn.scss
+++ b/scss/bootstrap/_cdn.scss
@@ -1,4 +1,4 @@
-// CDN BOOTSTRAP
+// CDN BOOTSTRAP ICONS
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 // CDN ANIMATE
