--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -28,7 +28,7 @@
     &__desc-about {
         font-size: 1.2rem;
         padding: 1rem;
-        
+
     }
 
     &__title-about {
@@ -150,12 +150,38 @@
 .copyright {
     background-image: linear-gradient(to bottom, var(--color-bg-primary), var(--color-bg-secondary));
     padding: 1.5rem;
+    font-size: 1.3rem;
 
     &__text {
         text-align: center;
         color: var(--color-font-primary);
         font-family: var(--font-secondary);
-        font-size: 1rem;
+    }
+
+    &__profile {
+        display: inline-flex;
+        place-content: center;
+        place-items: center;
+        font-size: 1.5rem;
+        margin: 0.5rem;
+    }
+
+    &__github {
+        margin: 0.5rem;
+    }
+
+    &__linkedin {
+        margin: 0.5rem;
+    }
+
+    &__link {
+        &--github {
+            @include social-icon ($hv-color: var(--color-github), $ft-size: 1.5rem, $ft-padding: 0)
+        }
+
+        &--linkedin {
+            @include social-icon ($hv-color: var(--color-linkedin), $ft-size: 1.5rem, $ft-padding: 0)
+        }
     }
 }
 
