--- a/css/stylescss.css
+++ b/css/stylescss.css
@@ -12,6 +12,18 @@
     transform: translate3d(0, 0, 0);
     opacity: 1; } }
 
+@keyframes eye {
+  0% {
+    height: 0.8rem; }
+  50% {
+    height: 0.8rem; }
+  52% {
+    height: 0.1rem; }
+  54% {
+    height: 0.8rem; }
+  100% {
+    height: 0.8rem; } }
+
 .btn, .form__button {
   text-transform: uppercase;
   font-family: var(--font-secondary);
@@ -120,15 +132,130 @@
     .navbar-toggler .navbar-toggler-icon {
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 0.55)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
   .btn--light {
-    color: var(--color-font-primary);
+    color: var(--color-font-secondary);
     border-color: var(--color-blue);
     box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
     background-color: var(--color-blue);
     transition: 0.7s; }
     .btn--light:hover {
-      color: var(--color-font-secondary);
-      border-color: var(--color-green);
-      background-color: var(--color-green); } }
+      color: var(--color-blue);
+      border-color: var(--color-blue);
+      background-color: transparent; } }
+
+.main-404 {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+
+.center {
+  background-color: var(--color-bg-primary);
+  text-align: center;
+  padding: 2rem;
+  width: 60%;
+  width: MIN(40rem, 95%);
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  place-content: center;
+  border-radius: 1rem;
+  box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow); }
+  .center__error {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    align-content: center; }
+  .center__number {
+    color: var(--color-font-primary);
+    font-weight: 900;
+    font-size: 12rem;
+    line-height: 1;
+    margin: 0 2.1rem; }
+  .center__illustration {
+    position: relative;
+    width: 12.2rem;
+    margin: 0 2.1rem; }
+  .center__circle {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 12.2rem;
+    height: 11.4rem;
+    border-radius: 50%;
+    background-color: var(--color-primary); }
+  .center__clip {
+    display: inline-block;
+    position: absolute;
+    bottom: 0.3rem;
+    left: 50%;
+    transform: translateX(-50%);
+    overflow: hidden;
+    flex-wrap: nowrap;
+    width: 12.5rem;
+    height: 13rem;
+    border-radius: 0 0 50% 50%; }
+  .center__paper {
+    position: absolute;
+    bottom: -0.3rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 9.2rem;
+    height: 12.4rem;
+    border: 0.3rem solid var(--color-primary);
+    background-color: var(--color-font-primary);
+    border-radius: 0.8rem; }
+    .center__paper::before {
+      content: "";
+      position: absolute;
+      top: -0.7rem;
+      right: -0.7rem;
+      width: 1.4rem;
+      height: 1rem;
+      background-color: var(--color-font-primary);
+      border-bottom: 0.3rem solid var(--color-primary);
+      transform: rotate(45deg); }
+  .center__face {
+    position: relative;
+    margin-top: 2.3rem; }
+  .center__eyes {
+    position: absolute;
+    top: 0;
+    left: 2.4rem;
+    width: 4.6rem;
+    height: 0.8rem; }
+  .center__eye {
+    position: absolute;
+    bottom: 0;
+    width: 0.8rem;
+    height: 0.8rem;
+    border-radius: 50%;
+    background-color: var(--color-bg-primary);
+    animation-name: eye;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out; }
+    .center__eye--left {
+      left: 0; }
+    .center__eye--right {
+      right: 0; }
+  .center__mouth {
+    position: absolute;
+    top: 3.1rem;
+    left: 50%;
+    width: 1.6rem;
+    height: 0.2rem;
+    border-radius: 0.1rem;
+    transform: translateX(-50%);
+    background-color: var(--color-bg-primary); }
+  .center__text {
+    grid-area: text;
+    font-family: var(--font-secondary);
+    font-size: 2rem;
+    margin: 3rem 0;
+    font-weight: 300;
+    color: var(--color-font-primary); }
 
 .main {
   text-align: center;
@@ -273,6 +400,42 @@
       margin-left: 2rem; } }
 
 .offers__container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, auto);
+  padding: 2rem;
+  gap: 1rem;
+  place-content: center space-around; }
+
+.hardware__products {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow: auto;
+  gap: 1.25rem;
+  padding: 1.25rem; }
+
+.hardware__subtitle {
+  grid-column: 1/-1;
+  grid-template-rows: 3.125rem;
+  color: var(--color-font-secondary);
+  padding: 1rem;
+  background-color: var(--color-violet);
+  box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
+  border-radius: 0.5rem;
+  justify-self: normal;
+  align-self: center; }
+
+.hardware__content-subtitle {
+  display: block;
+  text-align: center;
+  margin-bottom: 0;
+  font-family: var(--font-primary); }
+  @media (min-width: 768px) {
+    .hardware__content-subtitle {
+      text-align: start;
+      margin-left: 2rem; } }
+
+.hardware__container {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(2, auto);
@@ -792,6 +955,7 @@
   .card .card-img-top {
     width: 100%;
     height: 15.625rem;
+    overflow: hidden;
     object-fit: cover;
     border-radius: 1rem 1rem 0 0; }
   .card .card-body {
