--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@
 @import './base/fonts';
 @import './base/reset';
 @import './layout/theme';
+@import './layout/404';
 @import './layout/main';
 @import './bootstrap/carousel';
 @import './components/containers';
