--- a/scss/utilities/_animations.scss
+++ b/scss/utilities/_animations.scss
@@ -1,5 +1,6 @@
 // ANIMATIONS
 
+// ANIMATION FADE CAMP FORMS
 @keyframes fade-in-up {
     from {
         transform: translate3d(0, 2.5rem, 0)
@@ -8,5 +9,24 @@
     to {
         transform: translate3d(0, 0, 0);
         opacity: 1
+    }
+}
+
+// ANIMATION PAGE 404
+@keyframes eye {
+    0% {
+        height: 0.8rem;
+    }
+    50% {
+        height: 0.8rem;
+    }
+    52% {
+        height: 0.1rem;
+    }
+    54% {
+        height: 0.8rem;
+    }
+    100% {
+        height: 0.8rem;
     }
 }
