--- a/css/stylescss.css
+++ b/css/stylescss.css
@@ -577,25 +577,31 @@
   gap: 2rem;
   place-content: center space-around; }
 
-.video__iframe, .map__iframe {
+.video__iframe,
+.map__iframe {
   border-radius: 0.5rem;
-  margin: 3rem;
   box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
   grid-area: media; }
   @media (min-width: 0) {
-    .video__iframe, .map__iframe {
-      width: 20rem;
-      height: 15rem; } }
+    .video__iframe,
+    .map__iframe {
+      margin: 1rem;
+      width: 30rem;
+      height: 20rem; } }
   @media (min-width: 576px) {
-    .video__iframe, .map__iframe {
+    .video__iframe,
+    .map__iframe {
       width: 35rem;
       height: 20rem; } }
   @media (min-width: 768px) {
-    .video__iframe, .map__iframe {
+    .video__iframe,
+    .map__iframe {
+      margin: 3rem;
       width: 45rem;
       height: 25rem; } }
   @media (min-width: 992px) {
-    .video__iframe, .map__iframe {
+    .video__iframe,
+    .map__iframe {
       width: 65rem;
       height: 45rem; } }
 
