--- a/scss/components/_multimedia.scss
+++ b/scss/components/_multimedia.scss
@@ -1,14 +1,15 @@
 // MULTIMEDIA
-.video, .map {
+.video,
+.map {
     &__iframe {
         border-radius: 0.5rem;
-        margin: 3rem;
         box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
         grid-area: media;
 
         @include xs {
-            width: 20rem;
-            height: 15rem;
+            margin: 1rem;
+            width: 30rem;
+            height: 20rem;
         }
 
         @include sm {
@@ -17,6 +18,7 @@
         }
 
         @include md {
+            margin: 3rem;
             width: 45rem;
             height: 25rem;
         }
