--- a/scss/components/_containers.scss
+++ b/scss/components/_containers.scss
@@ -137,10 +137,13 @@
 
 // CONTENEDOR DE MULTIMEDIA - VIDEO PRESENTACION
 .video {
-    @include block-container(&__content);
+
+    @include block-container(&__iframe);
+
 }
 
 // CONTENEDOR DE MULTIMEDIA - MAPA
 .map {
-    @include block-container(&__content);
+
+    @include block-container(&__iframe);
 }
