--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -16,8 +16,8 @@ $color-youtube: #F21100;
 $color-facebook: #3F62A8;
 $color-github: #BC1885;
 $color-linkedin: #0A66C2;
-$color-gradient-1-black: rgb(128, 108, 108);
-$color-gradient-2-black: rgba(65, 47, 47, 0.1);
+$color-gradient-1-black: #dcdee2;
+$color-gradient-2-black: #dcdee2;
 $color-toggler:rgba(0, 0, 0, 0.55);
 
 // DARK MODE
