--- a/css/stylescss.css
+++ b/css/stylescss.css
@@ -12,18 +12,6 @@
     transform: translate3d(0, 0, 0);
     opacity: 1; } }
 
-@keyframes eye {
-  0% {
-    height: 0.8rem; }
-  50% {
-    height: 0.8rem; }
-  52% {
-    height: 0.1rem; }
-  54% {
-    height: 0.8rem; }
-  100% {
-    height: 0.8rem; } }
-
 .btn, .form__button {
   text-transform: uppercase;
   font-family: var(--font-secondary);
@@ -122,8 +110,8 @@
     --color-facebook: #3F62A8;
     --color-github: #BC1885;
     --color-linkedin: #0A66C2;
-    --color-gradient-1-black: #806c6c;
-    --color-gradient-2-black: rgba(65, 47, 47, 0.1);
+    --color-gradient-1-black: #dcdee2;
+    --color-gradient-2-black: #dcdee2;
     --color-toggler: rgba(0, 0, 0, 0.55); }
   .navbar-toggler {
     border-color: var(--color-toggler); }
@@ -164,91 +152,18 @@
   .center__error {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 95%;
     justify-content: center;
     align-content: center; }
   .center__number {
-    color: var(--color-font-primary);
+    background-image: linear-gradient(to right, var(--color-pink), var(--color-blue));
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
     font-weight: 900;
     font-size: 12rem;
     line-height: 1;
-    margin: 0 2.1rem; }
-  .center__illustration {
-    position: relative;
-    width: 12.2rem;
-    margin: 0 2.1rem; }
-  .center__circle {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 12.2rem;
-    height: 11.4rem;
-    border-radius: 50%;
-    background-color: var(--color-primary); }
-  .center__clip {
-    display: inline-block;
-    position: absolute;
-    bottom: 0.3rem;
-    left: 50%;
-    transform: translateX(-50%);
-    overflow: hidden;
-    flex-wrap: nowrap;
-    width: 12.5rem;
-    height: 13rem;
-    border-radius: 0 0 50% 50%; }
-  .center__paper {
-    position: absolute;
-    bottom: -0.3rem;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 9.2rem;
-    height: 12.4rem;
-    border: 0.3rem solid var(--color-primary);
-    background-color: var(--color-font-primary);
-    border-radius: 0.8rem; }
-    .center__paper::before {
-      content: "";
-      position: absolute;
-      top: -0.7rem;
-      right: -0.7rem;
-      width: 1.4rem;
-      height: 1rem;
-      background-color: var(--color-font-primary);
-      border-bottom: 0.3rem solid var(--color-primary);
-      transform: rotate(45deg); }
-  .center__face {
-    position: relative;
-    margin-top: 2.3rem; }
-  .center__eyes {
-    position: absolute;
-    top: 0;
-    left: 2.4rem;
-    width: 4.6rem;
-    height: 0.8rem; }
-  .center__eye {
-    position: absolute;
-    bottom: 0;
-    width: 0.8rem;
-    height: 0.8rem;
-    border-radius: 50%;
-    background-color: var(--color-bg-primary);
-    animation-name: eye;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out; }
-    .center__eye--left {
-      left: 0; }
-    .center__eye--right {
-      right: 0; }
-  .center__mouth {
-    position: absolute;
-    top: 3.1rem;
-    left: 50%;
-    width: 1.6rem;
-    height: 0.2rem;
-    border-radius: 0.1rem;
-    transform: translateX(-50%);
-    background-color: var(--color-bg-primary); }
+    margin: 0 1rem; }
   .center__text {
     grid-area: text;
     font-family: var(--font-secondary);
@@ -580,30 +495,27 @@
 .video__iframe,
 .map__iframe {
   border-radius: 0.5rem;
-  box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow);
-  grid-area: media; }
+  box-shadow: 0.3125rem 0.3125rem 1.25rem var(--color-shadow); }
   @media (min-width: 0) {
     .video__iframe,
     .map__iframe {
-      margin: 1rem;
-      width: 30rem;
-      height: 20rem; } }
+      width: 25.8rem;
+      height: 14.5rem; } }
   @media (min-width: 576px) {
     .video__iframe,
     .map__iframe {
-      width: 35rem;
+      width: 35.5rem;
       height: 20rem; } }
   @media (min-width: 768px) {
     .video__iframe,
     .map__iframe {
-      margin: 3rem;
       width: 45rem;
-      height: 25rem; } }
+      height: 25.5rem; } }
   @media (min-width: 992px) {
     .video__iframe,
     .map__iframe {
-      width: 65rem;
-      height: 45rem; } }
+      width: 57.5rem;
+      height: 32.3rem; } }
 
 .offcanvas-header {
   display: grid;
